Update spacing on Lean Space & SOT case studies, fix bug where live links didn't work on case studies

--- a/src/front/pages/Blog/posts/_CSSOT.scss
+++ b/src/front/pages/Blog/posts/_CSSOT.scss
@@ -2,7 +2,7 @@
 @use '../../../visuals/scale/size';
 
 .grid-blog-cs-sot > .subgrid-content {
-  > .early-work > .right-half {
+  > .early-work > .sticky-media {
     margin-top: size.$size-54;
   }
 
